<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">


    <PreferenceCategory app:title="@string/sync_header"
        app:icon="@drawable/ic_baseline_settings_24">


        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Dark Mode"
        app:icon="@drawable/ic_baseline_dark_mode_24">

        <SwitchPreferenceCompat
            app:title="Enable Dark Mode"
            app:summaryOff="Light Mode"
            app:summaryOn="Dark Mode"/>

        <ListPreference
            app:title="Duration of Nigh Mode"
            app:defaultValue="Just Today"
            app:entries="@array/dark_mode_entries"
            app:entryValues="@array/dark_mode_values"
            app:key="dark_mode"
            app:useSimpleSummaryProvider="true"/>




    </PreferenceCategory>

    <PreferenceCategory app:title="Notifications"
        app:icon="@drawable/ic_baseline_notifications_24">

        <SeekBarPreference
            app:key="volume_notification"
            app:title="volume"
            app:showSeekBarValue="true"
            app:defaultValue="50" />

        <SwitchPreferenceCompat
            app:key="notifications"
            app:title="Disable notifications"
            app:summaryOn="You will no longer receive notifications"
            app:summaryOff="You will receive all notifications"/>

        <ListPreference
            app:title="Enforcement Method"
            app:defaultValue="Medium"
            app:entries="@array/enforcement_mode_entries"
            app:entryValues="@array/enforcement_mode_values"
            app:useSimpleSummaryProvider="true"
            app:key="dark_mode"/>



    </PreferenceCategory>

</PreferenceScreen>