<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/appBackgroundThemeRed">

            <ImageView
                android:id="@+id/imageView_signInLogo"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:transitionName="logo_image"
                android:src="@drawable/redlogo"/>

        </LinearLayout>



        <TextView
            android:id="@+id/textView_welcomeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_there_welcome_back"
            android:transitionName="logo_text"
            android:layout_marginTop="10dp"
            android:textSize="40sp"
            android:fontFamily="@font/bungee"
            android:includeFontPadding="false"
            android:textColor="#000"/>

        <TextView
            android:id="@+id/textView_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/sign_in_to_continue"
            android:textColor="#ffffff"
            android:transitionName="text_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:transitionName="text_username"
                app:boxBackgroundColor="@color/appSecondaryColorRed"
                app:boxStrokeColor="#000"
                app:boxStrokeWidth="2dp"
                android:hint="@string/email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textColorHighlight="#000000"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:transitionName="text_password"
                app:boxBackgroundColor="@color/appSecondaryColorRed"
                android:id="@+id/password"
                app:boxStrokeColor="#000"
                app:boxStrokeWidth="2dp"
                android:hint="@string/password"
                app:passwordToggleEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textColorHighlight="#000000"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/relativeLayout">

                <Button
                    android:id="@+id/button_forgotPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:elevation="0dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/black"
                    android:layout_margin="5dp"
                    />

            </RelativeLayout>

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/go"
                android:transitionName="button_go"
                android:background="#000"
                android:textColor="#fff"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <Button
                android:id="@+id/button_newUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="5dp"
                android:transitionName="button_newUser"
                android:background="@android:color/transparent"
                android:text="@string/new_user_sign_up"
                android:textColor="@color/black"/>


        </LinearLayout>

    </LinearLayout>



</FrameLayout>