<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/appBackgroundThemeRed"
        android:orientation="vertical"
        android:padding="20dp">


        <ImageView
            android:id="@+id/Logo"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:src="@drawable/redlogo"
            android:transitionName="logo_image"/>

        <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/bungee"
            android:includeFontPadding="false"
            android:text="@string/welcome"
            android:textColor="#000"
            android:textSize="40sp"
            android:transitionName="logo_text" />

        <TextView
            android:id="@+id/Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/sign_up_to_start_your_journey"
            android:transitionName="text_description"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/newFullName"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                app:boxStrokeWidth="2dp"
                app:boxStrokeColor="#000"
                app:boxBackgroundColor="@color/appSecondaryColorRed"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/appSecondaryColorRed"
                    android:textColor="#000000"
                    android:textColorHighlight="#000000"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/newEmail"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                app:boxStrokeWidth="2dp"
                app:boxStrokeColor="#000"
                app:boxBackgroundColor="@color/appSecondaryColorRed"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/appSecondaryColorRed"
                    android:textColor="#000000"
                    android:textColorHighlight="#000000"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/newPhoneNumber"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                app:boxStrokeWidth="2dp"
                app:boxStrokeColor="#000"
                app:boxBackgroundColor="@color/appSecondaryColorRed"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/phone_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/appSecondaryColorRed"
                    android:textColor="#000000"
                    android:textColorHighlight="#000000"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/newPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxStrokeWidth="2dp"
                app:boxStrokeColor="#000"
                app:boxBackgroundColor="@color/appSecondaryColorRed"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:passwordToggleEnabled="true"
                android:transitionName="text_password"
                android:hint="@string/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/appSecondaryColorRed"
                    android:textColor="#000000"
                    android:textColorHighlight="#000000"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_createNewUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#000"
                android:text="@string/go"
                android:layout_marginTop="10dp"
                android:transitionName="button_go"
                android:textColor="#FFF" />

            <Button
                android:id="@+id/button_backToSignIn"
                android:layout_width="match_parent"
                android:textColor="#ffffff"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account_log_in"
                android:transitionName="button_newUser"
                android:background="@android:color/transparent"
                android:textSize="12sp"/>

        </LinearLayout>


    </LinearLayout>


</FrameLayout>