<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetPasswordFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SetNewPassword"
        android:padding="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:src="@drawable/ic_action_delta" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="-20dp"
                android:fontFamily="@font/bungee"
                android:gravity="center"
                android:textAlignment="center"
                android:text="New Credentials"
                android:textColor="@color/mainText"
                android:textSize="40sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verification_success"
                android:textAllCaps="false"
                android:fontFamily="@font/mulish"
                android:textSize="16sp"
                android:layout_marginTop="-20dp"
                android:gravity="center"
                android:textColor="@color/mainText"
                android:layout_gravity="center"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="40dp"
                app:boxBackgroundColor="@color/background"
                app:boxStrokeColor="@color/mainText"
                android:textColorHint="@color/textAlt"
                android:hint="@string/new_password"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="3dp"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_forgetPasswordNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/mainText"
                    android:textColorHighlight="@color/accentColor"
                    android:drawableStart="@drawable/ic_action_darkpass"
                    android:drawablePadding="5dp"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxBackgroundColor="@color/background"
                app:boxStrokeColor="@color/mainText"
                android:textColorHint="@color/textAlt"
                android:hint="@string/confirm_password"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="3dp"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_forgetPasswordConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:textColor="@color/mainText"
                    android:textColorHighlight="@color/accentColor"
                    android:drawableStart="@drawable/ic_action_darkpass"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_forgetPasswordNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/accentColor"
                android:textColor="@color/background"
                android:text="@string/ok"/>


        </LinearLayout>

    </ScrollView>


</FrameLayout>